Integrates linkage methods with clustering level